[package]
name = "d4-framefile"
version = "0.1.16"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Framefile container crate for D4 file format"
repository = "https://github.com/38/d4-format"


[dependencies]
serde = "1.0.104"
memmap = "0.7.0"
flate2 = "1.0.13"
