[package]
name = "d4-framefile"
version = "0.2.18"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Framefile container crate for D4 file format"
repository = "https://github.com/38/d4-format"


[dependencies]
memmap = {version = "0.7.0", optional = true}
async-trait = {version = "0.1.51"}

[features]
mapped_io = ["memmap"]
