[package]
name = "d4-framefile"
version = "0.3.1"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The Framefile container crate for D4 file format"
repository = "https://github.com/38/d4-format"


[dependencies]
memmap = {version = "0.7.0", optional = true}

[features]
mapped_io = ["memmap"]
