[package]
name = "d4"
version = "0.2.18"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The D4 file format implementation"
repository = "https://github.com/38/d4-format"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
rand = {version = "0.8.4", optional = true }
rayon = {version = "1.3.0", optional = true}
flate2 = "1.0.14"
smallvec = "1.7.0"

[dependencies.d4-framefile]
path = "../d4-framefile"

[dependencies.d4-hts]
path = "../d4-hts"
optional = true

[features]
depth_profiler = ["d4-hts", "rayon", "rand"]
task = ["mapped_io", "rayon"]
mapped_io = ["d4-framefile/mapped_io"]
writer = ["mapped_io"]
default = ["depth_profiler", "task", "writer"]