[package]
name = "d4"
version = "0.3.6"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The D4 file format implementation"
repository = "https://github.com/38/d4-format"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
rand = {version = "0.8.4", optional = true }
rayon = {version = "1.3.0", optional = true}
flate2 = "1.0.14"
smallvec = "1.7.0"
log = "0.4.14"

[dependencies.reqwest]
version = "0.11.2"
optional = true
default-features = false
features = ["rustls-tls", "blocking"]

[dependencies.d4-framefile]
#path = "../d4-framefile"
version = "0.3"

[dependencies.d4-hts]
#path = "../d4-hts"
version = "0.3"
optional = true

[features]
depth_profiler = ["d4-hts", "rayon", "rand"]
task = ["mapped_io", "rayon"]
mapped_io = ["d4-framefile/mapped_io"]
writer = ["mapped_io"]
http_reader = ["reqwest"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
default = ["depth_profiler", "task", "writer", "http_reader"]
seq-task = []

[dev-dependencies]
env_logger = "0.9.0"
