[package]
name = "d4binding"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4 = {path = "../d4"}
rayon = "1.3.0"

[build-dependencies]
bindgen = "0.53.2"

[lib]
crate_type = ["cdylib", "staticlib"]
