[package]
name = "d4binding"
version = "0.3.3"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4 = { path = "../d4"}
rayon = "1.3.0"

[build-dependencies]
bindgen = "0.59.1"

[lib]
crate_type = ["cdylib", "staticlib"]
