[package]
name = "d4utils"
version = "0.1.13"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The CLI utils for D4 file format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4 = { path = "../d4" }
d4-hts = { path = "../d4-hts" }
d4-framefile = { path = "../d4-framefile" }
d4-bigwig = { path = "../d4-bigwig" }
rayon = "1.3.0"
clap = { version = "2.33.0", features = ["yaml"] }
regex = "1.3.1"
log = "0.4.8"
env_logger = "0.7.1"
plotters = { version = "0.2.12", default_features = false, features = ["svg", "area_series"] }

[dependencies.cpuprofiler]
version = "0.0.4"
optional = true

[features]
prof = ["cpuprofiler"]

