[package]
name = "d4utils"
version = "0.2.18"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The CLI utils for D4 file format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4 = { path = "../d4" }
d4-hts = { path = "../d4-hts" }
d4-framefile = { path = "../d4-framefile", features = ["mapped_io"]}
d4-bigwig = { path = "../d4-bigwig" }
#d4 = "0.2.18"
#d4-hts = "0.2.18"
#d4-framefile = "0.2.18"
#d4-bigwig = "0.2.18"
rayon = "1.3.0"
clap = { version = "2.33.0", features = ["yaml"] }
regex = "1.3.1"
log = "0.4.8"
env_logger = "0.7.1"
plotters = { version = "0.2.12", default_features = false, features = ["svg", "area_series"] }
warp = "0.3.1"
tokio = {version = "1.11.0", features = ["full"]}
serde_derive = "1.0.130"
serde = "1.0.130"
serde_json = "1.0.68"

[[bin]]
name = "d4tools"
path = "src/main.rs"
