[package]
name = "pyd4"
version = "0.1.13"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"

[dependencies]
d4 = { git = "https://github.com/38/d4-format.git" }
pyo3 = "0.17.0"
rayon = "1.4.0"
env_logger = "0.9.0"

[lib]
crate-type = ["cdylib"]
name = "_pyd4"
path = "src/lib.rs"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]