[package]
name = "depth-hist"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4 = { path = "../d4/d4" }
#plotters = { git = "https://github.com/38/plotters.git", branch = "v0.3-pre" , default-features = true, features = ["svg_backend"]}
plotters = "0.3"
rayon = "1.3.0"
serde_json = "1.0.53"
serde = "1.0.111"
serde_derive = "1.0.111"
