[package]
name = "find-high-expressed-region"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4 = { path = "/uufs/chpc.utah.edu/common/HIPAA/u0875014/c2f-project/d4-format/d4" }
rayon = "1.4.0"
