[package]
name = "find-high-cov-region"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4 = { git="https://github.com/38/d4-format.git" }
rayon = "1.3.0"
